微服务模板项目

--- a/ace-auth/ace-auth-client/pom.xml
+++ b/ace-auth/ace-auth-client/pom.xml
@@ -26,12 +26,13 @@
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-okhttp</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-openfeign-core -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-openfeign-core</artifactId>
-            <version>2.0.0.M1</version>
-            <scope>provided</scope>
+            <version>2.1.0.RELEASE</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
