--- a/ace-auth/ace-auth-server/src/main/resources/application.yml
+++ b/ace-auth/ace-auth-server/src/main/resources/application.yml
@@ -7,15 +7,15 @@ spring:
     default-property-inclusion: non_null
   redis:
     database: 2
-    host: ${REDIS_HOST:localhost}
-    port: ${REDIS_PORT:6379}
+    host: localhost
+    port: 6379
     pool:
     max-active: 20
   datasource:
     name: test
-    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/ag_auth_v1?useUnicode=true&characterEncoding=UTF8
+    url: jdbc:mysql://localhost:3306/ag_auth_v1?useUnicode=true&characterEncoding=UTF8&serverTimezone=GMT%2B8
     username: root
-    password: 123456QWE
+    password: root
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
@@ -33,8 +33,8 @@ spring:
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
   rabbitmq:
-    host: ${RABBIT_MQ_HOST:localhost}
-    port:  ${RABBIT_MQ_PORT:5672}
+    host: localhost
+    port:  5672
     username: guest
     password: guest
   sleuth:
